<resources>
    <string name="app_name">LCompass</string>
    <string name="api_info">Legacy API: from Android2.2 was abandoned, through the software algorithm to achieve. \n The new API: through the "magnetic field sensor and acceleration sensor" co-access (do not believe that a magnet close to the phone try). \n both may have errors, but also their own flaws, it is recommended to confirm each other.</string>
    <string name="type_info">Dial mode: This is the regular compass app mode, this mode, the dial is always the right direction, the pointer for the phone direction. \n pointer mode: This mode is to simulate the real compass, dial for the phone direction, the pointer always points in the correct direction.</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_about">About Us</string>
    <string name="BottomSheetBehavior">android.support.design.widget.BottomSheetBehavior</string>

    <string name="key_dial_bg_color" translatable="false">DIAL_BG_COLOR</string>
    <string name="key_dial_scale_color" translatable="false">DIAL_SCALE_COLOR</string>
    <string name="key_dial_text_color" translatable="false">DIAL_TEXT_COLOR</string>
    <string name="key_pointer_color" translatable="false">POINTER_COLOR</string>
    <string name="key_pointer_bg_color" translatable="false">POINTER_BG_COLOR</string>
    <string name="key_root_bg_color" translatable="false">ROOT_BG_COLOR</string>
    <string name="key_location_text_color" translatable="false">LOCATION_TEXT_COLOR</string>
    <string name="key_root_bg_image_state" translatable="false">ROOT_BG_IMAGE_STATE</string>
    <string name="key_root_bg_image" translatable="false">ROOT_BG_IMAGE</string>
    <string name="key_dial_bg_image_state" translatable="false">DIAL_BG_IMAGE_STATE</string>
    <string name="key_dial_bg_image" translatable="false">DIAL_BG_IMAGE</string>
    <string name="key_pointer_bg_image_state" translatable="false">POINTER_BG_IMAGE_STATE</string>
    <string name="key_pointer_bg_image" translatable="false">POINTER_BG_IMAGE</string>
    <string name="key_show_setting_btn" translatable="false">SHOW_SETTING_BTN</string>
    <string name="key_stable_mode" translatable="false">STABLE_MODE</string>
    <string name="key_rotating_foreground" translatable="false">ROTATING_FOREGROUND</string>
    <string name="key_old_api" translatable="false">OLD_API</string>
    <string name="key_3d_mode" translatable="false">3D_MODE</string>
    <string name="key_camera_mode" translatable="false">CAMERA_MODE</string>
    <string name="key_chinese_mode" translatable="false">CHINESE_MODE</string>
    <string name="key_overflow_avoid" translatable="false">OVERFLOW_AVOID</string>
    <string name="key_noise_reduction" translatable="false">NOISE_REDUCTION</string>
    <string name="dialog_title_hint">Warning</string>
    <string name="dialog_message_clone">Welcome to update to the new version, this version of the setup interface and architecture to do a complete refactoring, the structure is more concise, and more easy to use. But changes in the architecture lead to data is not common. \n It is worth noting that your choice may cause some problems with the application. If a problem occurs, you can clear the user data to recover. \n So do you want to clone old data to the new version?</string>
    <string name="dialog_btn_no_remind">No remind</string>
    <string name="dialog_btn_clone">Clone(Reboot effective)</string>
    <string name="dialog_btn_remind">Remind</string>
    <string name="no_loc_permission">You are not authorized to use location permissions and will not be able to display location information. Whether to open?</string>
    <string name="no_sensor_permission">You are not authorized to use the sensor and will not be able to display the orientation information. Whether to open?</string>
    <string name="no_camera_permission">You are not authorized to use the camera and will not be able to display azimuth information. Whether to open?</string>
    <string name="no_find_camera">Can not find the camera</string>
    <string name="no_find_location">The location provider is not found. Please check if the location is turned on.</string>
    <string name="pointer_model">Currently for pointer mode</string>
    <string name="dial_model">Currently for dial mode</string>
    <string name="difference">difference</string>
    <string name="old_api_model">Currently for legacy API mode</string>
    <string name="new_api_model">Currently for the new API mode</string>
    <string name="c3d_model">Is currently in 3D mode</string>
    <string name="c2d_model">Is currently in 2D mode</string>
    <string name="open_camera_mode">Currently for camera mode</string>
    <string name="off_camera_mode">Current is normal mode</string>
    <string name="api_difference">API distinction</string>
    <string name="model_difference">Pattern difference</string>
    <string name="location_service_disconnect">Location service has been disconnected</string>
    <string name="location_service_disable">Location service is temporarily unavailable</string>
    <string name="location_service_restore">Location service has resumed</string>
    <string name="new_location_provider">There is a new location available source available:</string>
    <string name="disable_location_provider">Location source is disabled:</string>
    <string name="no_write_sd_with_fonts">You are not authorized to read and write storage space, the application will not be able to get the custom font in the storage space, and you will use the system default font. \n is turned on and the restart application takes effect. Is it open manually?</string>
    <string name="dialog_btn_positive">determine</string>
    <string name="dialog_btn_negative">cancel</string>
    <string name="dialog_btn_travel_to">Go to set</string>
    <string name="dialog_btn_no">no need</string>
    <string name="copyright_lollipop">This is made by XiaoLiang! Remember me! And I may change the name, called Lollipop</string>
    <string name="color_settings">Color setting</string>
    <string name="title_dial_bg">Dial background</string>
    <string name="summary_dial_bg">The background color of the compass dial</string>
    <string name="title_dial_scale">Dial scale</string>
    <string name="summary_dial_scale">The scale color of the compass dial</string>
    <string name="title_dial_text">Dial text</string>
    <string name="summary_dial_text">The color of the compass dial</string>
    <string name="title_pointer_color">Pointer foreground</string>
    <string name="summary_pointer_color">The color of the compass pointer</string>
    <string name="title_pointer_bg">Pointer background</string>
    <string name="summary_pointer_bg">The background color of the compass pointer</string>
    <string name="title_loc_text_color">Text information</string>
    <string name="summary_loc_text_color">The color of the text description information</string>
    <string name="title_root_bg">Interface background</string>
    <string name="summary_root_bg">Displays the background color of the interface</string>
    <string name="image_setting">Picture settings</string>
    <string name="title_root_img_state">Background image status</string>
    <string name="summary_on_root_img_state">The interface background will appear as a picture</string>
    <string name="summary_off_root_img_state">The interface background will be displayed as background color</string>
    <string name="title_root_img">Background picture</string>
    <string name="summary_root_img">Click to select the background image</string>
    <string name="title_dial_img_state">Dial picture status</string>
    <string name="summary_on_dial_img_state">The dial background will appear as a picture</string>
    <string name="summary_off_dial_img_state">The dial background will be displayed as background color</string>
    <string name="title_pointer_img_state">Pointer image status</string>
    <string name="summary_on_pointer_img_state">The pointer background will appear as a picture</string>
    <string name="summary_off_pointer_img_state">The pointer background will be displayed as background color</string>
    <string name="title_pointer_img">Pointer picture</string>
    <string name="summary_pointer_img">Click to select the pointer image</string>
    <string name="other_setting">Other</string>
    <string name="title_show_setting_btn">Display setting button</string>
    <string name="summary_on_show_setting_btn">The home page will display the settings button and the reboot will take effect.</string>
    <string name="summary_off_show_setting_btn">The home page will no longer show the settings button, reboot will take effect.</string>
    <string name="title_stable_mode">Stable mode</string>
    <string name="summary_on__stable_mode">Has opened the stable mode, the azimuth of the decimal places will be forced to quit, which will improve the compass jitter problem.</string>
    <string name="summary_off__stable_mode">The stable mode has been turned off and you will see the most accurate data, but there may be high frequency jitter.</string>
    <string name="title_chinese_model">Chinese model</string>
    <string name="summary_on_chinese_model">Has opened the Chinese mode, the orientation flag will be described in Chinese. Custom font: go to the phone to save the directory, find LCompass/ttf/, which put a font called fonts.ttf (or fonts.otf), and then restart the application can be.</string>
    <string name="summary_off_chinese_model">The Chinese mode is turned off and the orientation flag will be described in letters. Custom font: go to the phone to save the directory, find LCompass/ttf/, which put a font called fonts.ttf (or fonts.otf), and then restart the application can be.</string>
    <string name="title_overflow_avoid">Overflow to avoid</string>
    <string name="summary_on_overflow_avoid">Has started overflow to avoid, 3D mode, will hide the tick marks, to prevent rotation caused by the problem of drawing overflow.</string>
    <string name="summary_off_overflow_avoid">Has been turned off for overflow, 3D mode, will not hide the tick marks, may cause the drawing to overflow due to rotation.</string>
    <string name="title_dial_img">Dial picture</string>
    <string name="summary_dial_img">Click to select the dial image</string>
    <string name="north">North</string>
    <string name="north_east">North East</string>
    <string name="east_north">East North</string>
    <string name="east">East</string>
    <string name="east_south">East South</string>
    <string name="south_east">South East</string>
    <string name="south">South</string>
    <string name="north_west">North West</string>
    <string name="west_north">West North</string>
    <string name="west">West</string>
    <string name="west_south">West South</string>
    <string name="south_west">South West</string>
    <string name="north_latitude">North latitude:</string>
    <string name="south_latitude">South latitude:</string>
    <string name="east_longitude">East longitude:</string>
    <string name="west_longitude">West longitude:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="meter">m</string>
    <string name="altitude">Altitude:</string>
    <string name="speed">Speed:</string>
    <string name="meters_per_second">m/s</string>
    <string name="pressure">Pressure:</string>
    <string name="hpa">hPa</string>
    <string name="title_noise_reduction"> fluctuation noise reduction </string>
    <string name="summary_on_noise_reduction"> has been started, will reduce the jitter of the dial or pointer according to the trend </string>
    <string name="summary_off_noise_reduction"> noise reduction is turned off, you will see the most real data </string>
</resources>
