<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="颜色设置">
        <com.liang.lollipop.lcompass.preference.ColorPreference
            app:defaultColor="@android:color/white"
            android:title="表盘背景"
            android:summary="指南针表盘的背景颜色"
            android:key="@string/key_dial_bg_color"/>
        <com.liang.lollipop.lcompass.preference.ColorPreference
            app:defaultColor="#FF888888"
            android:title="表盘刻度"
            android:summary="指南针表盘的刻度颜色"
            android:key="@string/key_dial_scale_color"/>
        <com.liang.lollipop.lcompass.preference.ColorPreference
            app:defaultColor="#FF888888"
            android:title="表盘文字"
            android:summary="指南针表盘的文字颜色"
            android:key="@string/key_dial_text_color"/>
        <com.liang.lollipop.lcompass.preference.ColorPreference
            app:defaultColor="#FF888888"
            android:title="指针前景"
            android:summary="指南针指针的颜色"
            android:key="@string/key_pointer_color"/>
        <com.liang.lollipop.lcompass.preference.ColorPreference
            app:defaultColor="@android:color/transparent"
            android:title="指针背景"
            android:summary="指南针指针的背景颜色"
            android:key="@string/key_pointer_bg_color"/>
        <com.liang.lollipop.lcompass.preference.ColorPreference
            app:defaultColor="@color/background"
            android:title="文字信息"
            android:summary="文字描述信息的颜色"
            android:key="@string/key_location_text_color"/>
        <com.liang.lollipop.lcompass.preference.ColorPreference
            app:defaultColor="@color/background"
            android:title="界面背景"
            android:summary="显示界面的背景颜色"
            android:key="@string/key_root_bg_color"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="图片设置">
        <SwitchPreference
            android:defaultValue="true"
            android:title="背景图片状态"
            android:summaryOn="界面背景将显示为图片"
            android:summaryOff="界面背景将显示为背景色"
            android:key="@string/key_root_bg_image_state"/>
        <com.liang.lollipop.lcompass.preference.ImagePreference
            android:dependency="@string/key_root_bg_image_state"
            android:key="@string/key_root_bg_image"
            app:aspectRatioHeight="16"
            app:aspectRatioWidth="9"
            app:cropPhoto="true"
            app:maxHeight="1920"
            app:maxWidth="1080"
            android:title="背景图片"
            android:summary="点击选择背景图片"/>
        <SwitchPreference
            android:defaultValue="true"
            android:title="表盘图片状态"
            android:summaryOn="表盘背景将显示为图片"
            android:summaryOff="表盘背景将显示为背景色"
            android:key="@string/key_dial_bg_image_state"/>
        <com.liang.lollipop.lcompass.preference.ImagePreference
            android:dependency="@string/key_dial_bg_image_state"
            android:key="@string/key_dial_bg_image"
            app:aspectRatioHeight="1"
            app:aspectRatioWidth="1"
            app:cropPhoto="true"
            app:maxHeight="512"
            app:maxWidth="512"
            android:title="表盘图片"
            android:summary="点击选择表盘图片"/>
        <SwitchPreference
            android:defaultValue="true"
            android:title="指针图片状态"
            android:summaryOn="指针背景将显示为图片"
            android:summaryOff="指针背景将显示为背景色"
            android:key="@string/key_pointer_bg_image_state"/>
        <com.liang.lollipop.lcompass.preference.ImagePreference
            android:dependency="@string/key_pointer_bg_image_state"
            android:key="@string/key_pointer_bg_image"
            app:aspectRatioHeight="1"
            app:aspectRatioWidth="1"
            app:cropPhoto="true"
            app:maxHeight="512"
            app:maxWidth="512"
            android:title="指针图片"
            android:summary="点击选择指针图片"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="其他">
        <SwitchPreference
            android:title="显示设置按钮"
            android:summaryOn="主页将显示设置按钮"
            android:summaryOff="主页将不再显示设置按钮"
            android:key="@string/key_show_setting_btn"/>
        <SwitchPreference
            android:title="稳定模式"
            android:summaryOn="已开启稳定模式，方位角的小数位会被强行舍去，这将会改善指南针的抖动问题。"
            android:summaryOff="已关闭稳定模式，您将看到最精确的数据，但是可能会有高频率的抖动。"
            android:key="@string/key_stable_mode"/>
        <SwitchPreference
            android:title="中文模式"
            android:defaultValue="true"
            android:summaryOn="已开启中文模式，方位标志将会用中文描述。自定义字体：前往手机储存目录，找到LCompass/ttf/,里面放一个名为fonts.ttf(或fonts.otf)的字体，再重启应用即可。"
            android:summaryOff="已关闭中文模式，方位标志将会用字母描述。自定义字体：前往手机储存目录，找到LCompass/ttf/,里面放一个名为fonts.ttf(或fonts.otf)的字体，再重启应用即可。"
            android:key="@string/key_chinese_mode"/>
        <SwitchPreference
            android:key="@string/key_overflow_avoid"
            android:title="溢出规避"
            android:defaultValue="true"
            android:summaryOn="已启动溢出规避，3D模式时，将隐藏刻度线，防止旋转造成的绘制溢出问题。"
            android:summaryOff="已关闭溢出规避，3D模式时，将不会隐藏刻度线，可能会因为旋转造成绘制溢出。"/>
    </PreferenceCategory>
</PreferenceScreen>